Imperative examples and F# examples

--- a/src/RailwayOrientedProgramming/RailwayOrientedProgramming.csproj
+++ b/src/RailwayOrientedProgramming/RailwayOrientedProgramming.csproj
@@ -198,10 +198,13 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="CommandResult.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PersonController.cs" />
+    <Compile Include="DAL\ImperativePersonContext.cs" />
     <Compile Include="DAL\Person.cs" />
     <Compile Include="DAL\PersonContext.cs" />
+    <Compile Include="Extensions\IListExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -250,6 +253,9 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Person\Create.cshtml" />
+    <Content Include="Views\Person\Index.cshtml" />
+    <Content Include="Views\Person\CreateImperative.cshtml" />
+    <Content Include="Views\Person\_Person.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
